--- a/TODO
+++ b/TODO
@@ -1,4 +1,6 @@
 Redesign to be a collection, and read config.rktd, tutor.txt, etc from a working directory
+Modify update.sh to be update.sh.default or something.
+validate.rkt should read the headta from config.rktd
 
 -- Added via git grep TODO: >> TODO; git grep NB: >> TODO --
 
